Regression: Rendering in the viewport is constantly restarted by some sculpting brushes and the position of mouse cursor #99196
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#99196
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Quadro RTX 3000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.25
Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash:
e05e1e3691
Worked: 3.2.1
So the original issue came with
8b7cd1ed2a
This apparently got "fixed" by
285a68b7bb
Short description of error
Cycles affected by the brushes.mp4
Rendering in the viewport is constantly restarted by some sculpting brushes and the position of mouse cursor.
1, Moving the mouse cursor out of the viewport can stop causing the problem.
2, Not all brushes are causing the problem. For example, Grab brush, Elastic brush, Draw brush, Mask brush are not causing the problem.
3, This problem does not happen in Blender 3.1 or Blender 3.0.
note: after
285a68b7bb
, it seems only the Pose & Boundary brushes are still affected (and only if you hover the mesh)Exact steps for others to reproduce the error
A sample file is included.
Bug on Cycles rendering in Sculpt.blend
Added subscriber: @Stay_Here
#99510 was marked as duplicate of this issue
Added subscriber: @PratikPB2123
Changed status from 'Needs Triage' to: 'Confirmed'
Thanks for the report.
I can confirm in 3.2.1 but not in 3.1 and 3.3
Added subscriber: @lichtwerk
Fixed between
173a15bcda
-add1da52ad
Exact commit is not known to me. @lichtwerk , can you check please?
Will bisect when this changed (for the better).
Note though that the Pose and Boundary brushes are still affected if you hover over the mesh (also in master)
Added subscriber: @JosephEagar
This apparently got "fixed" by
285a68b7bb
So nothing to backport to 3.2.1 I guess
CC @JosephEagar
Note though this was entirely fine in 3.2.1 (even with the
Pose
&Boundary
brushes, which are now still broken in that regard in master), will check what was the original cause in the first place (maybe that will help fix said two brushes as well...)Added subscriber: @Jeroen-Bakker
So the original issue came with
8b7cd1ed2a
CC @Jeroen-Bakker
Rendering in the viewport is constantly restarted by some sculpting brushes and the position of mouse cursorto Regression: Rendering in the viewport is constantly restarted by some sculpting brushes and the position of mouse cursorThis issue was referenced by
f7c6d3705d
This issue was referenced by
2185943235
This issue was referenced by
ee57ac8abf
This issue was referenced by
c39e932631
Changed status from 'Confirmed' to: 'Resolved'
Ok. I had to do a small amount of cleanup, but I think I've gotten this fixed. The root cause was paint-related code in
sculpt_update_object
(called by its external API,BKE_sculpt_update_object_for_edit
). I went through and renamed the two functions'needs_color
(which was actually unused) parameter tois_paint_tool
. I also fixed a bunch of places where I had named API parameters or functions "color" instead of "paint", and a few bugs caused by it.Added subscriber: @Alex_Rom
Removed subscriber: @Alex_Rom